tests/templatetest/foo/bar/Test.java
package foo.bar;

import edu.ucr.cs.riple.taint.ucrtainting.qual.*;

public class Test {

  //    private List<String> tokens;
  //    public List<@RUntainted String> getAllTokens() {
  //        // :: error: return
  //        return this.tokens;
  //    }
}
